
	* src/scanner.cpp:
	* src/scanner.: Silence '$' in identifier warnings when -nowarn
	specified.
	* src/parser.cpp (PackageHeaderParse): Allocate memory to prevent
	core dump when compiling GNU's Classpath.
	* src/lookup.cpp (IsConstantString): 
	* src/expr.cpp (CastValue, IsIntValueRepresentableInType): Fix
	missing cases in previous commit, exposed by Classpath.
	(ProtectedAccessCheck):
	* src/semantic.h (ProtectedAccessCheck): Update rules to fix bug
	exposed by Classpath.
	* src/decl.cpp (CompleteSymbolTable): Special case
	java.lang.Object when checking concrete classes.	

2002-02-05  Eric Blake  <ebb9@email.byu.edu>

	* src/definite.cpp (DefiniteExpression): Optimize DA/DU analysis
	of constant expressions.
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/expr.cpp: Use IsConstantTrue and IsConstantFalse in more
	places, and convert LiteralValue* casts to DYNAMIC_CASTs.
	* src/lookup.cpp:
	* src/lookup.h (IsConstantString): Rename from IsConstant, and
	update to work with string concat changes.
	* src/semantic.h:
	* src/expr.cpp (CastPrimitiveValue): Inline into CastValue.
	(ProcessPLUS, ProcessAssignmentExpression):
	* src/bytecode.cpp (AppendString): Update string concatenation to
	avoid useless compiler-generated cast in the middle, the cause of
	bug 2625 - patch 259.

2002-01-31  Eric Blake  <ebb9@email.byu.edu>

	* src/class.h:
	* src/op.h:
	* src/op.cpp: Format to 80 columns, and standardize
	capitalization to rest of Jikes. Use Opcode enum for type safety
	and easier debugging.
	* src/bytecode.h (EmitBranch(unsigned, Label&)): Inline into the
	more powerful EmitBranch(Opcode, Label&, AstStatement*).
	* src/bytecode.cpp: Fix more cases where EmitBranch was not
	checking for wide jumps - bug 2538.
	(EmitTryStatement): More optimizations - patch 258.

2002-01-11  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessSLASH, ProcessMOD): Fix core dump when
	caution instead of error occurs on divide by 0 - bug 2568.
